# fingerprint

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  operator.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
benches/: assertion_throughput.rs  normalization.rs  pipeline_throughput.rs
docs/: BENCHMARK_BASELINE.md  HTML_CONSUMER_CUTOVER.md  HTML_VERIFICATION.md  PLAN.md  PLAN_HTML_FORMAT.md  RELEASE_PARITY_AUDIT.md  TEST_COVERAGE_PARITY.md  release.md
rules/: bdc-soi-ares.v1.fp.yaml  bdc-soi-blackrock.v1.fp.yaml  bdc-soi-bxsl.v1.fp.yaml  bdc-soi-golub.v1.fp.yaml  bdc-soi-pennant.v1.fp.yaml  bdc-soi.v1.fp.yaml
scripts/: html_diagnose.sh  html_e2e.py  html_family_matrix.sh  html_parity_audit.py  html_parity_audit.sh  html_route_consumer.py  html_route_consumer.sh  html_smoke.sh  html_verify.sh  install.ps1  install.sh
src/: lib.rs  main.rs
src/cli/: args.rs  exit.rs  mod.rs
src/compile/: codegen.rs  crate_gen.rs  mod.rs  schema.rs  validate.rs
src/document/: csv.rs  dispatch.rs  html.rs  markdown.rs  mod.rs  pdf.rs  raw.rs  text.rs  xlsx.rs
src/dsl/: assertions.rs  content_hash.rs  extract.rs  mod.rs  parser.rs
src/infer/: aggregator.rs  emitter.rs  frankensearch.rs  mod.rs  observer.rs  schema.rs  schema_infer.rs  search.rs
src/output/: jsonl.rs
src/pipeline/: enricher.rs  parallel.rs  reader.rs
tests/: bdc_html_family_rules.rs  chained_fingerprint_scenarios.rs  chained_fingerprints.rs  chained_routing_run_mode.rs  cli_smoke_surfaces.rs  compile_mode_html.rs  content_assertion_edge_cases.rs  docs_release_surfaces.rs  golden_output_determinism.rs  golden_rules.rs  html_e2e_scripts.rs  html_fixture_inventory.rs  html_parity_audit.rs  html_route_consumer.rs  infer_mode.rs  infer_schema_mode.rs  infer_subcommand.rs  pipeline_integration.rs  pipeline_parallel_execution.rs  refusal_path_coverage.rs  run_mode_pipeline.rs  struct_check.rs
(+58 files in other folders)
