[package]
name = "fingerprint"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.5.60", features = ["derive"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
calamine = "=0.26.1"
lopdf = "=0.34.0"
csv = "=1.3.1"
blake3 = "=1.6.1"
chrono = "=0.4.41"
regex = "=1.11.1"
serde_yaml = "=0.9.34"
globset = "=0.4.16"

[dev-dependencies]
tempfile = "=3.21.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
