[package]
name = "fingerprint"
version = "0.1.0"
edition = "2024"
authors = ["CMD+RVL Inc. <engineering@cmd.com>"]
description = "Content fingerprinting and document recognition system with DSL-based assertion engine"
license = "MIT"
repository = "https://github.com/SaltIO/fingerprint"
readme = "README.md"
keywords = ["document", "recognition", "content", "fingerprint", "assertion"]
categories = ["command-line-utilities", "text-processing", "parsing"]

[dependencies]
clap = { version = "=4.5.60", features = ["derive"] }
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.143"
calamine = "=0.26.1"
lopdf = "=0.34.0"
csv = "=1.3.1"
blake3 = "=1.6.1"
chrono = "=0.4.41"
regex = "=1.11.1"
serde_yaml = "=0.9.34"
globset = "=0.4.16"
futures = "=0.3.31"
frankensearch-core = "=0.1.2"
frankensearch-embed = { version = "=0.1.2", default-features = false, features = ["hash"] }
frankensearch-lexical = "=0.1.0"

[dev-dependencies]
tempfile = "=3.25.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "assertion_throughput"
harness = false

[[bench]]
name = "pipeline_throughput"
harness = false

[[bench]]
name = "normalization"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
